--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terra Viva Tech</title>
+    <!-- Chamando css -->
+    <link rel="stylesheet" href="./src/css/estilo.css">
 </head>
 <header>
     <h1 id="logo">Terra Viva Tech</h1>
     <nav>
         <ul>
+            <!-- criando navegaçao entre as paginas -->
             <li><a href="index.html"></a></li>
             <li><a href="./src/pages/ajuda.html"></a></li>
             <li><a href="./src/pages/benef.html"></a></li>
