--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <nav>
         <ul>
             <!-- criando navegaçao entre as paginas -->
-            <li><a href="index.html"></a></li>
+            <li><a href="index.html">Home</a>
             <li><a href="./src/pages/ajuda.html"></a></li>
             <li><a href="./src/pages/benef.html"></a></li>
             <li><a href="./src/pages/obj.html"></a></li>
             <li><a href="./src/pages/publ.html"></a></li>
-            <li><a href="./src/pages/solucao.html"></a></li>
+            <li><a href="./src/pages/solucao.html">Cadastro</a></li>
             <li><a href="./src/pages/tec.html"></a></li>
         </ul>
     </nav>
