--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terra Viva Tech</title>
+    <!-- colocando icone da pagina -->
+     <link rel="icon" href="./src/assets/icon_transparente.png">
     <!-- Chamando css -->
     <link rel="stylesheet" href="./src/css/estilo.css">
 </head>
