codando menu hamburguer e organizando pagina

--- a/index.html
+++ b/index.html
@@ -9,22 +9,38 @@
     <!-- Chamando css -->
     <link rel="stylesheet" href="./src/css/estilo.css">
 </head>
-<header>
-    <h1 id="logo">Terra Viva Tech</h1>
-    <nav>
-        <ul>
-            <!-- criando navegaçao entre as paginas -->
-            <li><a href="index.html">Home</a>
-            <li><a href="./src/pages/ajuda.html"></a></li>
-            <li><a href="./src/pages/benef.html"></a></li>
-            <li><a href="./src/pages/obj.html"></a></li>
-            <li><a href="./src/pages/publ.html"></a></li>
-            <li><a href="./src/pages/solucao.html">Cadastro</a></li>
-            <li><a href="./src/pages/tec.html"></a></li>
-        </ul>
-    </nav>
-</header>
 <body>
-    
+
+    <section class="hero">
+        <header>
+            <h1><span>Loja</span>Cars</h1>
+            <nav>
+                <ul>
+                     <!-- criando navegaçao entre as paginas -->
+                    <li><a href="index.html">Home</a>
+                    <li><a href="./src/pages/ajuda.html"></a></li>
+                    <li><a href="./src/pages/benef.html"></a></li>
+                    <li><a href="./src/pages/obj.html"></a></li>
+                    <li><a href="./src/pages/publ.html"></a></li>
+                    <li><a href="./src/pages/solucao.html">Cadastro</a></li>
+                    <li><a href="./src/pages/tec.html"></a></li>
+                </ul>
+            </nav>
+
+            <div class="hamburguer">
+                <span class="barra"></span>
+                <span class="barra"></span>
+                <span class="barra"></span>
+
+            </div>
+        </header>
+
+        <h2 id="titulo">Tecnologia contra as águas,<span>a favor do agro</span></h2>
+
+    </section>
+    <!-- chamando js externo -->
+    <script src="./src/js/script.js"></script>
 </body>
 </html>
+
+           
