adicionando slideshow e arrumando hamburguer

--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -13,17 +13,14 @@
 
     <section class="hero">
         <header>
-            <h1><span>Loja</span>Cars</h1>
+            <h1><span>TerraViva</span>Tech</h1>
             <nav>
                 <ul>
                      <!-- criando navegaçao entre as paginas -->
                     <li><a href="../../index.html">Home</a>
-                    <li><a href="./"></a></li>
-                    <li><a href="./src/pages/benef.html"></a></li>
-                    <li><a href="./src/pages/obj.html"></a></li>
-                    <li><a href="./src/pages/publ.html"></a></li>
-                    <li><a href="./src/pages/solucao.html">Cadastro</a></li>
-                    <li><a href="./src/pages/tec.html"></a></li>
+                    <li><a href="../../src/pages/Quiz.html"></a>Quiz</li>
+                    <li><a href="./cadastro.html">Cadastro</a></li>
+                    <li><a href="./infos.html"></a>informaçoes</li>
                 </ul>
             </nav>
 
