--- a/index.html
+++ b/index.html
@@ -1,46 +1,58 @@
 <!DOCTYPE html>
-<html lang="Pt-br">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terra Viva Tech</title>
-    <!-- colocando icone da pagina -->
-     <link rel="icon" href="./src/assets/icon_transparente.png">
-    <!-- Chamando css -->
-    <link rel="stylesheet" href="./src/css/estilo.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Terra Viva Tech</title>
+  <link rel="icon" href="./src/assets/icon_transparente.png" />
+  <link rel="stylesheet" href="./src/css/estilo.css" />
 </head>
 <body>
+  <section class="hero">
+    <header>
+      <h1><span>TerraViva</span>Tech</h1>
+      <nav class="header-menu">
+        <ul>
+          <!-- Navegação entre as páginas -->
+          <li><a href="index.html">Home</a></li>
+          <li><a href="./src/pages/quiz.html">Quiz</a></li>
+          <li><a href="./src/pages/cadastro.html">Cadastro</a></li>
+          <li><a href="./src/pages/infos.html">Informações</a></li>
+        </ul>
+      </nav>
 
-    <section class="hero">
-        <header>
-            <h1><span>Loja</span>Cars</h1>
-            <nav>
-                <ul>
-                     <!-- criando navegaçao entre as paginas -->
-                    <li><a href="index.html">Home</a>
-                    <li><a href="./src/pages/ajuda.html"></a></li>
-                    <li><a href="./src/pages/benef.html"></a></li>
-                    <li><a href="./src/pages/obj.html"></a></li>
-                    <li><a href="./src/pages/publ.html"></a></li>
-                    <li><a href="./src/pages/solucao.html">Cadastro</a></li>
-                    <li><a href="./src/pages/tec.html"></a></li>
-                </ul>
-            </nav>
+      <div class="hamburguer">
+        <span class="barra"></span>
+        <span class="barra"></span>
+        <span class="barra"></span>
+      </div>
+    </header>
 
-            <div class="hamburguer">
-                <span class="barra"></span>
-                <span class="barra"></span>
-                <span class="barra"></span>
+    <!-- SLIDESHOW -->
+    <div class="slideshow-container">
+      <div class="slide active">
+        <img src="./src/assets/imundada.webp" alt="Slide 1" />
+        <div class="text">Monitoramento de enchentes em tempo real</div>
+      </div>
 
-            </div>
-        </header>
+      <div class="slide">
+        <img src="./src/assets/imagem slide1.jpg" alt="Slide 2" />
+        <div class="text">Dados climáticos integrados ao agronegócio</div>
+      </div>
 
-        <h2 id="titulo">Tecnologia contra as águas,<span>a favor do agro</span></h2>
+      <div class="slide">
+        <img src="./src/assets/icon_transparente.png" alt="Slide 3" />
+        <div class="text">Soluções práticas para produtores rurais</div>
+      </div>
 
-    </section>
-    <!-- chamando js externo -->
-    <script src="./src/js/script.js"></script>
+      <button class="prev" onclick="plusSlides(-1)">&#10094;</button>
+      <button class="next" onclick="plusSlides(1)">&#10095;</button>
+    </div>
+
+    <h2 id="titulo">Tecnologia contra as águas, <span>a favor do agro</span></h2>
+  </section>
+
+  <!-- JavaScript externo -->
+  <script src="./src/js/script.js"></script>
 </body>
 </html>
-
-           
