--- a/index.html
+++ b/index.html
@@ -31,20 +31,26 @@
     <!-- SLIDESHOW -->
     <div class="slideshow-container">
       <div class="slide active">
+        <!-- trocar imagens -->
         <img src="./src/assets/imundada.webp" alt="Slide 1" />
+        <!-- Adicionar texto das imagens -->
         <div class="text">Monitoramento de enchentes em tempo real</div>
       </div>
 
       <div class="slide">
+         <!-- trocar imagens -->
         <img src="./src/assets/imagem slide1.jpg" alt="Slide 2" />
+          <!-- Adicionar texto das imagens -->
         <div class="text">Dados climáticos integrados ao agronegócio</div>
       </div>
 
       <div class="slide">
+         <!-- trocar imagens -->
         <img src="./src/assets/icon_transparente.png" alt="Slide 3" />
+          <!-- Adicionar texto das imagens -->
         <div class="text">Soluções práticas para produtores rurais</div>
       </div>
-
+      <!-- botao para passar slides  -->
       <button class="prev" onclick="plusSlides(-1)">&#10094;</button>
       <button class="next" onclick="plusSlides(1)">&#10095;</button>
     </div>
