fazendo pagina do cadastro

--- a/index.html
+++ b/index.html
@@ -9,30 +9,37 @@
 </head>
 <body>
   <section class="hero">
-    <header>
+<header>
+  <div class="header-content">
+    <div class="logo-container">
+      <img src="./src/assets/icon_transparente.png" alt="Logo TerraVivaTech" class="logo" />
       <h1><span>TerraViva</span>Tech</h1>
-      <nav class="header-menu">
-        <ul>
-          <!-- Navegação entre as páginas -->
-          <li><a href="index.html">Home</a></li>
-          <li><a href="./src/pages/quiz.html">Quiz</a></li>
-          <li><a href="./src/pages/cadastro.html">Cadastro</a></li>
-          <li><a href="./src/pages/infos.html">Informações</a></li>
-        </ul>
-      </nav>
+    </div>
 
-      <div class="hamburguer">
-        <span class="barra"></span>
-        <span class="barra"></span>
-        <span class="barra"></span>
-      </div>
-    </header>
+    <nav class="header-menu">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="./src/pages/quiz.html">Quiz</a></li>
+        <li><a href="./src/pages/cadastro.html">Cadastro</a></li>
+        <li><a href="./src/pages/infos.html">Informações</a></li>
+      </ul>
+    </nav>
+
+    <div class="hamburguer">
+      <span class="barra"></span>
+      <span class="barra"></span>
+      <span class="barra"></span>
+    </div>
+  </div>
+</header>
+
+
 
     <!-- SLIDESHOW -->
     <div class="slideshow-container">
       <div class="slide active">
         <!-- trocar imagens -->
-        <img src="./src/assets/imundada.webp" alt="Slide 1" />
+        <img src="./src/assets/problema.webp" alt="Slide 1" />
         <!-- Adicionar texto das imagens -->
         <div class="text">Monitoramento de enchentes em tempo real</div>
       </div>
@@ -57,6 +64,10 @@
 
     <h2 id="titulo">Tecnologia contra as águas, <span>a favor do agro</span></h2>
   </section>
+<footer>
+  <p>&copy; 2025 TerraVivaTech. Todos os direitos reservados.</p>
+</footer>
+
 
   <!-- JavaScript externo -->
   <script src="./src/js/script.js"></script>
