--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -1,43 +1,53 @@
 <!DOCTYPE html>
-<html lang="Pt-br">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terra Viva Tech</title>
-    <!-- colocando icone da pagina -->
-     <link rel="icon" href="./src/assets/icon_transparente.png">
-    <!-- Chamando css -->
-    <link rel="stylesheet" href="./src/css/estilo.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Terra Viva Tech</title>
+  <link rel="icon" href="./src/assets/icon_transparente.png" />
+  <link rel="stylesheet" href="../css/estilo.css" />
 </head>
 <body>
+  <section class="hero">
+<header>
+  <div class="header-content">
+    <div class="logo-container">
+      <img src="../assets/icon_transparente.png" alt="Logo TerraVivaTech" class="logo" />
+      <h1><span>TerraViva</span>Tech</h1>
+    </div>
 
-    <section class="hero">
-        <header>
-            <h1><span>TerraViva</span>Tech</h1>
-            <nav>
-                <ul>
-                     <!-- criando navegaçao entre as paginas -->
-                    <li><a href="../../index.html">Home</a>
-                    <li><a href="../../src/pages/Quiz.html"></a>Quiz</li>
-                    <li><a href="./cadastro.html">Cadastro</a></li>
-                    <li><a href="./infos.html"></a>informaçoes</li>
-                </ul>
-            </nav>
+    <nav class="header-menu">
+      <ul>
+        <li><a href="../../index.html">Home</a></li>
+        <li><a href="./src/pages/quiz.html">Quiz</a></li>
+        <li><a href="./src/pages/cadastro.html">Cadastro</a></li>
+        <li><a href="./src/pages/infos.html">Informações</a></li>
+      </ul>
+    </nav>
 
-            <div class="hamburguer">
-                <span class="barra"></span>
-                <span class="barra"></span>
-                <span class="barra"></span>
+    <div class="hamburguer">
+      <span class="barra"></span>
+      <span class="barra"></span>
+      <span class="barra"></span>
+    </div>
+    
+    <div class="formulario-cadastro">
+  <h2>Faca o cadastro para receber notificaoes sobre as areas de risco</h2>
+  <form id="cadastroForm">
+    <label for="nome">Nome:</label>
+    <input type="text" id="nome" name="nome" required>
 
-            </div>
-        </header>
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" required>
 
-        <h2 id="titulo">Tecnologia contra as águas,<span>a favor do agro</span></h2>
+    <label for="mensagem">CEP:</label>
+    <textarea id="mensagem" name="mensagem" rows="5" required></textarea>
 
-    </section>
-    <!-- chamando js externo -->
-    <script src="./src/js/script.js"></script>
-</body>
-</html>
+    <button type="submit">Cadastre-se</button>
+  </form>
+  <p id="mensagemStatus"></p>
+</div>
 
-           
+  </div>
+</header>
+
