--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -2,52 +2,53 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Terra Viva Tech</title>
-  <link rel="icon" href="./src/assets/icon_transparente.png" />
-  <link rel="stylesheet" href="../css/estilo.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Login - TVTagro</title>
+  <link rel="stylesheet" href="login.css" />
 </head>
 <body>
-  <section class="hero">
-<header>
-  <div class="header-content">
-    <div class="logo-container">
-      <img src="../assets/icon_transparente.png" alt="Logo TerraVivaTech" class="logo" />
-      <h1><span>TerraViva</span>Tech</h1>
+
+  <div class="container">
+    <!-- Imagem da esquerda -->
+    <div class="left-panel">
+      <img src="images/fazenda-login.jpg" alt="Imagem agro" />
     </div>
 
-    <nav class="header-menu">
-      <ul>
-        <li><a href="../../index.html">Home</a></li>
-        <li><a href="./src/pages/quiz.html">Quiz</a></li>
-        <li><a href="./src/pages/cadastro.html">Cadastro</a></li>
-        <li><a href="./src/pages/infos.html">Informações</a></li>
-      </ul>
-    </nav>
+    <!-- Formulário de login -->
+    <div class="right-panel">
+      <div class="top-nav">
+        <a href="index.html" class="home-link">← Página Inicial</a>
+      </div>
 
-    <div class="hamburguer">
-      <span class="barra"></span>
-      <span class="barra"></span>
-      <span class="barra"></span>
+      <h2>Bem vindo à TVTagro</h2>
+
+      <div class="btn-toggle">
+        <button class="active">Login</button>
+        <button>Register</button>
+      </div>
+
+      <p class="subtitle">Que bom te ter de volta! Vamos fazer a mudança por um mundo mais AgroTech!</p>
+
+      <form class="login-form">
+        <label for="username">User name</label>
+        <input type="text" id="username" placeholder="Enter your User name" required>
+
+        <label for="password">Password</label>
+        <div class="password-field">
+          <input type="password" id="password" placeholder="Enter your Password" required>
+          <span class="toggle-password">👁️</span>
+        </div>
+
+        <div class="form-options">
+          <label><input type="checkbox"> Remember me</label>
+          <a href="#" class="forgot">Forgot Password?</a>
+        </div>
+
+        <button type="submit" class="login-btn">Login</button>
+      </form>
     </div>
-    
-    <div class="formulario-cadastro">
-  <h2>Faca o cadastro para receber notificaoes sobre as areas de risco</h2>
-  <form id="cadastroForm">
-    <label for="nome">Nome:</label>
-    <input type="text" id="nome" name="nome" required>
-
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required>
-
-    <label for="mensagem">CEP:</label>
-    <textarea id="mensagem" name="mensagem" rows="5" required></textarea>
-
-    <button type="submit">Cadastre-se</button>
-  </form>
-  <p id="mensagemStatus"></p>
-</div>
-
   </div>
-</header>
 
+  <script src="login.js"></script>
+</body>
+</html>
