--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -4,51 +4,40 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Login - TVTagro</title>
-  <link rel="stylesheet" href="login.css" />
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet"/>
 </head>
 <body>
-
   <div class="container">
-    <!-- Imagem da esquerda -->
-    <div class="left-panel">
-      <img src="images/fazenda-login.jpg" alt="Imagem agro" />
-    </div>
-
-    <!-- Formulário de login -->
-    <div class="right-panel">
-      <div class="top-nav">
-        <a href="index.html" class="home-link">← Página Inicial</a>
+    <div class="image-side"></div>
+    <div class="form-side">
+      <h2>Bem vindo a TVTagro</h2>
+      <div class="buttons">
+        <button class="login-btn">Login</button>
+        <button class="register-btn">Register</button>
       </div>
+      <p>Que bom te ter de volta! vamos fazer a mudança por um mundo mais AgroTech!</p>
 
-      <h2>Bem vindo à TVTagro</h2>
-
-      <div class="btn-toggle">
-        <button class="active">Login</button>
-        <button>Register</button>
-      </div>
-
-      <p class="subtitle">Que bom te ter de volta! Vamos fazer a mudança por um mundo mais AgroTech!</p>
-
-      <form class="login-form">
+      <div class="form-group">
         <label for="username">User name</label>
-        <input type="text" id="username" placeholder="Enter your User name" required>
+        <input type="text" id="username" placeholder="Enter your User name"/>
+      </div>
 
+      <div class="form-group password">
         <label for="password">Password</label>
-        <div class="password-field">
-          <input type="password" id="password" placeholder="Enter your Password" required>
-          <span class="toggle-password">👁️</span>
-        </div>
+        <input type="password" id="password" placeholder="Enter your Password"/>
+        <span class="password-icon" id="togglePassword">👁️</span>
+      </div>
 
-        <div class="form-options">
-          <label><input type="checkbox"> Remember me</label>
-          <a href="#" class="forgot">Forgot Password?</a>
-        </div>
+      <div class="extra">
+        <label><input type="checkbox"/> Remember me</label>
+        <a href="#">Forgot Password ?</a>
+      </div>
 
-        <button type="submit" class="login-btn">Login</button>
-      </form>
+      <button class="submit-btn">Login</button>
     </div>
   </div>
 
-  <script src="login.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
