Estilizando headder e cadastro

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="./index.html">Home</a></li>
         <li><a href="./src/pages/infos.html">Notícias</a></li>
         <li><a href="./src/pages/Quiz.html">Quiz</a></li>
-        <li><a href="./src/pages/cadastro.html"></a>Cadastro</li>
+        <li><a href="./src/pages/cadastro.html">Cadastro</a></li>
       </ul>
     </nav>
     <div class="hero-content">
