--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -5,48 +5,69 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Terra Viva Tech</title>
   <link rel="icon" href="./src/assets/icon_transparente.png" />
-  <link rel="stylesheet" href="../css/estilo.css" />
+  <link rel="stylesheet" href="../css/cadastro.css" />
 </head>
 <body>
-  <section class="hero">
-<header>
-  <div class="header-content">
-    <div class="logo-container">
-      <img src="../assets/icon_transparente.png" alt="Logo TerraVivaTech" class="logo" />
-      <h1><span>TerraViva</span>Tech</h1>
+  <header class="main-header">
+    <div class="header-content">
+      <div class="logo-container">
+        <img src="../assets/icon_transparente.png" alt="Logo TerraVivaTech" class="logo" />
+        <h1><span>TerraViva</span>Tech</h1>
+      </div>
+
+      <nav class="header-menu" id="nav-menu">
+        <ul>
+          <li><a href="../../index.html">Home</a></li>
+          <li><a href="./src/pages/quiz.html">Quiz</a></li>
+          <li><a href="./src/pages/cadastro.html">Cadastro</a></li>
+          <li><a href="./src/pages/infos.html">Informações</a></li>
+        </ul>
+      </nav>
+
+      <div class="hamburguer" id="hamburguer">
+        <span class="barra"></span>
+        <span class="barra"></span>
+        <span class="barra"></span>
+      </div>
     </div>
+  </header>
 
-    <nav class="header-menu">
-      <ul>
-        <li><a href="../../index.html">Home</a></li>
-        <li><a href="./src/pages/quiz.html">Quiz</a></li>
-        <li><a href="./src/pages/cadastro.html">Cadastro</a></li>
-        <li><a href="./src/pages/infos.html">Informações</a></li>
-      </ul>
-    </nav>
-
-    <div class="hamburguer">
-      <span class="barra"></span>
-      <span class="barra"></span>
-      <span class="barra"></span>
+  <section class="cadastro-container">
+    <div class="cadastro-imagem">
+      <img src="../assets/imgCadastro.jpg" alt="Imagem ilustrativa de fazenda" />
     </div>
     
     <div class="formulario-cadastro">
-  <h2>Faca o cadastro para receber notificaoes sobre as areas de risco</h2>
-  <form id="cadastroForm">
-    <label for="nome">Nome:</label>
-    <input type="text" id="nome" name="nome" required>
+      <h2>Cadastre-se para receber alertas de áreas de risco</h2>
+      <form id="cadastroForm">
+        <label for="nome">Nome:</label>
+        <input type="text" id="nome" name="nome" placeholder="Digite seu nome" required>
 
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" placeholder="Digite seu email" required>
 
-    <label for="mensagem">CEP:</label>
-    <textarea id="mensagem" name="mensagem" rows="5" required></textarea>
+      <label for="cep">CEP:</label>
+      <input type="text" id="cep" name="cep" placeholder="Digite seu CEP" required>
 
-    <button type="submit">Cadastre-se</button>
-  </form>
-  <p id="mensagemStatus"></p>
-</div>
+      <label for="telefone">Telefone:</label>
+      <input type="text" id="telefone" name="telefone" placeholder="Digite seu número" required>
 
-  </div>
-</header>
+        <button type="submit">Cadastrar</button>
+      </form>
+      <p id="mensagemStatus"></p>
+    </div>
+  </section>
+   <!-- RODAPÉ -->
+  <footer>
+    <p>© 2025 TVTagro - Todos os direitos reservados</p>
+    <div class="social">
+      <a href="#">Instagram</a>
+      <a href="#">LinkedIn</a>
+    </div>
+  </footer>
+
+
+
+  <script src="../js/cadastro.js"></script>
+</body>
+</html>
