fazendo quiz e estilizando

--- a/src/pages/infos.html
+++ b/src/pages/infos.html
@@ -1,43 +1,36 @@
 <!DOCTYPE html>
-<html lang="Pt-br">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terra Viva Tech</title>
-    <!-- colocando icone da pagina -->
-     <link rel="icon" href="./src/assets/icon_transparente.png">
-    <!-- Chamando css -->
-    <link rel="stylesheet" href="./src/css/estilo.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Terra Viva Tech</title>
+  <link rel="icon" href="./src/assets/icon_transparente.png" />
+  <link rel="stylesheet" href="../css/cadastro.css" />
 </head>
 <body>
+  <header class="main-header">
+    <div class="header-content">
+      <div class="logo-container">
+        <img src="../assets/icon_transparente.png" alt="Logo TerraVivaTech" class="logo" />
+        <h1><span>TerraViva</span>Tech</h1>
+      </div>
 
-    <section class="hero">
-        <header>
-            <h1><span>TerraViva</span>Tech</h1>
-            <nav>
-                <ul>
-                     <!-- criando navegaçao entre as paginas -->
-                    <li><a href="../../index.html">Home</a>
-                    <li><a href="./Quiz.html"></a>Quiz</li>
-                    <li><a href="./cadastro.html">Cadastro</a></li>
-                    <li><a href="./infos.html"></a>informaçoes</li>
-                </ul>
-            </nav>
+      <nav class="header-menu" id="nav-menu">
+        <ul>
+          <li><a href="../../index.html">Home</a></li>
+          <li><a href="./src/pages/quiz.html">Quiz</a></li>
+          <li><a href="./src/pages/cadastro.html">Cadastro</a></li>
+          <li><a href="./src/pages/infos.html">Informações</a></li>
+        </ul>
+      </nav>
 
-            <div class="hamburguer">
-                <span class="barra"></span>
-                <span class="barra"></span>
-                <span class="barra"></span>
+      <div class="hamburguer" id="hamburguer">
+        <span class="barra"></span>
+        <span class="barra"></span>
+        <span class="barra"></span>
+      </div>
+    </div>
+  </header>
 
-            </div>
-        </header>
-
-        <h2 id="titulo">Tecnologia contra as águas,<span>a favor do agro</span></h2>
-
-    </section>
-    <!-- chamando js externo -->
-    <script src="./src/js/script.js"></script>
-</body>
-</html>
 
            
