criando mapa e monitoramento

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="./src/pages/infos.html">Notícias</a></li>
         <li><a href="./src/pages/Quiz.html">Quiz</a></li>
         <li><a href="./src/pages/cadastro.html">Cadastro</a></li>
+          <li><a href="./src/pages/monitoramento.html">Monitoramento</a></li>
       </ul>
     </nav>
     <div class="hero-content">
