--- a/src/pages/Quiz.html
+++ b/src/pages/Quiz.html
@@ -20,6 +20,7 @@
           <li><a href="./quiz.html">Quiz</a></li>
           <li><a href="./cadastro.html">Cadastro</a></li>
           <li><a href="./infos.html">Informações</a></li>
+          <li><a href="./src/pages/monitoramento.html">Monitoramento</a></li>
         </ul>
       </nav>
 
@@ -40,4 +41,12 @@
 
   <script src="../js/quiz.js"></script>
 </body>
+ <!-- RODAPÉ -->
+  <footer>
+    <p>© 2025 TVTagro - Todos os direitos reservados</p>
+    <div class="social">
+      <a href="#">Instagram</a>
+      <a href="#">LinkedIn</a>
+    </div>
+  </footer>
 </html>
