--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -21,6 +21,7 @@
           <li><a href="./src/pages/quiz.html">Quiz</a></li>
           <li><a href="./src/pages/cadastro.html">Cadastro</a></li>
           <li><a href="./src/pages/infos.html">Informações</a></li>
+          <li><a href="./src/pages/monitoramento.html">Monitoramento</a></li>
         </ul>
       </nav>
 
@@ -57,7 +58,8 @@
       <p id="mensagemStatus"></p>
     </div>
   </section>
-   <!-- RODAPÉ -->
+  
+ <!-- RODAPÉ -->
   <footer>
     <p>© 2025 TVTagro - Todos os direitos reservados</p>
     <div class="social">
@@ -65,7 +67,6 @@
       <a href="#">LinkedIn</a>
     </div>
   </footer>
-
 
 
   <script src="../js/cadastro.js"></script>
