--- a/src/pages/monitoramento.html
+++ b/src/pages/monitoramento.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Terra Viva Tech</title>
-  <link rel="icon" href="./src/assets/icon_transparente.png" />
-  <link rel="stylesheet" href="../css/cadastro.css" />
+  <title>Quiz Agronegócio</title>
+  <link rel="stylesheet" href="../css/monitoramento.css" />
 </head>
 <body>
   <header class="main-header">
@@ -18,9 +17,9 @@
       <nav class="header-menu" id="nav-menu">
         <ul>
           <li><a href="../../index.html">Home</a></li>
-          <li><a href="./src/pages/quiz.html">Quiz</a></li>
-          <li><a href="./src/pages/cadastro.html">Cadastro</a></li>
-          <li><a href="./src/pages/infos.html">Informações</a></li>
+          <li><a href="./quiz.html">Quiz</a></li>
+          <li><a href="./cadastro.html">Cadastro</a></li>
+          <li><a href="./infos.html">Informações</a></li>
           <li><a href="./src/pages/monitoramento.html">Monitoramento</a></li>
         </ul>
       </nav>
@@ -31,7 +30,8 @@
         <span class="barra"></span>
       </div>
     </div>
+    <script src="../js/monitoramento.js"></script>
+  <script async
+    src="https://maps.googleapis.com/maps/api/js?key=SUA_API_KEY&callback=initMap">
+  </script>
   </header>
-
-
-           
