--- a/src/pages/monitoramento.html
+++ b/src/pages/monitoramento.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Quiz Agronegócio</title>
   <link rel="stylesheet" href="../css/monitoramento.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 </head>
 <body>
   <header class="main-header">
@@ -30,8 +31,28 @@
         <span class="barra"></span>
       </div>
     </div>
-    <script src="../js/monitoramento.js"></script>
-  <script async
-    src="https://maps.googleapis.com/maps/api/js?key=SUA_API_KEY&callback=initMap">
-  </script>
+    
+
+
   </header>
+    <main>
+    <div id="map"></div>
+    <div class="info">
+      <h2>Áreas monitoradas</h2>
+      <ul id="alert-list"></ul>
+    </div>
+  </main>
+
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+ 
+  <script src="../js/monitoramento.js"></script>
+  <!-- RODAPÉ -->
+  <footer>
+    <p>© 2025 TVTagro - Todos os direitos reservados</p>
+    <div class="social">
+      <a href="#">Instagram</a>
+      <a href="#">LinkedIn</a>
+    </div>
+    
+  </footer>
+</body>
