adicionando imagens e txt no home

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="logo">TVTagro</div>
       <ul class="nav-links">
         <li><a href="./index.html">Home</a></li>
-        <li><a href="./src/pages/infos.html">Notícias</a></li>
+        <li><a href="./src/pages/infos.html">Informações</a></li>
         <li><a href="./src/pages/Quiz.html">Quiz</a></li>
         <li><a href="./src/pages/cadastro.html">Cadastro</a></li>
           <li><a href="./src/pages/monitoramento.html">Monitoramento</a></li>
@@ -32,7 +32,10 @@
 
   <!-- INTRO -->
   <section class="intro">
-    <p>Você quer entender de forma rápida e simples como a tecnologia pode impulsionar o campo? Conheça nossas soluções e cases de sucesso!</p>
+    <p>    As mudanças climáticas têm tornado os eventos extremos cada vez mais frequentes, e entre eles, as enchentes representam uma das maiores ameaças ao campo. Pensando nisso, desenvolvemos um sistema inteligente de monitoramento de enchentes voltado especialmente para o setor agropecuário.
+    Nosso sistema oferece dados em tempo real sobre o nível dos rios, volume de chuvas e alertas meteorológicos, permitindo que produtores rurais, cooperativas e gestores do agronegócio tenham acesso rápido e confiável às informações necessárias para proteger suas propriedades, lavouras e rebanhos.
+    A plataforma permite visualizar mapas e gráficos com previsões e dados históricos, além de enviar alertas personalizados sobre risco de inundação. Isso possibilita que ações preventivas sejam planejadas com mais eficiência, como a evacuação de áreas, o deslocamento de animais ou a proteção de insumos e equipamentos. Ao antecipar os impactos, o produtor reduz prejuízos e garante mais segurança para as atividades no campo.
+    Seja você um pequeno agricultor ou um grande produtor, nosso compromisso é ajudar a fortalecer a resiliência do agro frente aos eventos climáticos extremos. Informação certa, na hora certa, para decisões mais seguras.</p>
   </section>
 
   <!-- CARDS: O que fazemos -->
@@ -54,15 +57,17 @@
   <!-- SOBRE / O que é a TVTagro -->
   <section class="sobre">
     <h2>O que é a TVTagro?</h2>
+    <h3>A TVTagro é uma empresa voltada para o desenvolvimento de soluções tecnológicas aplicadas à agricultura, meio ambiente e segurança em comunidades rurais. Unindo inovação, educação e sustentabilidade, a TVTagro foca  resolver problemas reais do campo e da cidade.</h3>
+    
     <div class="sobre-grid">
       <div class="sobre-item">
         <!--Colocar imagem-->
-        <img src="" alt="Aplicação no campo">
+        <img src="./src/assets/maquinas.jpg" alt="Aplicação no campo">
         <p>Aplicação prática de tecnologias no agronegócio diário.</p>
       </div>
       <div class="sobre-item">
         <!--Colocar imagem-->
-        <img src="" alt="Tecnologia">
+        <img src="./src/assets/drones.jpg" alt="Tecnologia">
         <p>Uso de drones, IoT, sensores e automação na lavoura.</p>
       </div>
     </div>
@@ -71,11 +76,11 @@
   <!-- DESTAQUE / Missão Verde -->
   <section class="destaque">
     <div class="destaque-texto">
-      <h2>Missão Verde</h2>
-      <p>Contribuir para um agro mais sustentável e conectado, democratizando o acesso à tecnologia no campo.</p>
+      <h2>Nossos ideais</h2>
+      <p>Na TVTagro, acreditamos que a tecnologia deve caminhar lado a lado com o cuidado ao meio ambiente. Nossos projetos são desenvolvidos com foco em soluções de baixo custo, baixo consumo energético e alto impacto positivo. Ao monitorar o clima, prevenir desastres naturais e automatizar processos no campo, promovemos o uso consciente dos recursos naturais e contribuímos para uma agricultura mais sustentável e resiliente.</p>
     </div>
     <!--Colocar imagem-->
-    <img src="" alt="Colheita no campo">
+    <img src="./src/assets/colheita.jpg" alt="Colheita no campo">
   </section>
 
   <!-- AGRICULTURA + TECNOLOGIA -->
@@ -83,8 +88,8 @@
     <h2>Agricultura + Tecnologia</h2>
     <div class="tecnologia-content">
       <!--Colocar imagem-->
-      <img src="" alt="Plantação tecnológica">
-      <p>Conectividade e inteligência em regiões rurais. Parceiros do futuro do agro.</p>
+      <img src="./src/assets/tecnologia.jpg" alt="Plantação tecnológica">
+      <p>Na TVTagro, vemos a tecnologia como uma ferramenta para transformar realidades. Nosso foco não está apenas nos componentes ou dispositivos, mas no que eles tornam possível: proteger vidas, melhorar a produção no campo e antecipar riscos ambientais. Desenvolvemos soluções que unem simplicidade, funcionalidade e propósito, sempre pensando nas pessoas e nos desafios do dia a dia. Mais do que inovar, queremos fazer a diferença com consciência e impacto positivo</p>
     </div>
   </section>
 
