fazendo noticias e estilizando

--- a/index.html
+++ b/index.html
@@ -14,12 +14,17 @@
       <div class="logo">TVTagro</div>
       <ul class="nav-links">
         <li><a href="./index.html">Home</a></li>
-        <li><a href="./src/pages/infos.html">Informações</a></li>
+        <li><a href="./src/pages/infos.html">Noticias</a></li>
         <li><a href="./src/pages/Quiz.html">Quiz</a></li>
         <li><a href="./src/pages/cadastro.html">Cadastro</a></li>
           <li><a href="./src/pages/monitoramento.html">Monitoramento</a></li>
       </ul>
     </nav>
+    <div class="hamburguer" id="hamburguer">
+        <span class="barra"></span>
+        <span class="barra"></span>
+        <span class="barra"></span>
+      </div>
     <div class="hero-content">
       <h1>Transforme o agro com AgroTech</h1>
       <p>Descubra como a TVTagro une tecnologia e campo para inovar na agricultura.</p>
@@ -101,6 +106,6 @@
       <a href="#">LinkedIn</a>
     </div>
   </footer>
- <script src="../js/script.js"></script>
+ <script src="./src/js/script.js"></script>
 </body>
 </html>
