--- a/src/pages/Quiz.html
+++ b/src/pages/Quiz.html
@@ -15,12 +15,12 @@
       </div>
 
       <nav class="header-menu" id="nav-menu">
-        <ul>
+         <ul>
           <li><a href="../../index.html">Home</a></li>
-          <li><a href="./quiz.html">Quiz</a></li>
+          <li><a href="./infos.html">Noticias</a></li>
+          <li><a href="./Quiz.html">Quiz</a></li>
           <li><a href="./cadastro.html">Cadastro</a></li>
-          <li><a href="./infos.html">Informações</a></li>
-          <li><a href="./src/pages/monitoramento.html">Monitoramento</a></li>
+          <li><a href="./monitoramento.html">Monitoramento</a></li>
         </ul>
       </nav>
 
