--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -18,10 +18,10 @@
       <nav class="header-menu" id="nav-menu">
         <ul>
           <li><a href="../../index.html">Home</a></li>
-          <li><a href="./src/pages/quiz.html">Quiz</a></li>
-          <li><a href="./src/pages/cadastro.html">Cadastro</a></li>
-          <li><a href="./src/pages/infos.html">Informações</a></li>
-          <li><a href="./src/pages/monitoramento.html">Monitoramento</a></li>
+          <li><a href="./infos.html">Noticias</a></li>
+          <li><a href="./Quiz.html">Quiz</a></li>
+          <li><a href="./cadastro.html">Cadastro</a></li>
+          <li><a href="./monitoramento.html">Monitoramento</a></li>
         </ul>
       </nav>
 
